--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,18 @@
+@font-face {
+  font-family: 'Rocher';
+  src: url(https://assets.codepen.io/9632/RocherColorGX.woff2);
+}
+
 body {
-    text-align: center;
-    font-size: 16px;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start; /* Align items to the start to respect top margin */
-    padding-top: 0; /* Remove top padding */
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; /* Update font family */
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; /* Use default font for body */
+  text-align: center;
+  font-size: 16px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start; /* Align items to the start to respect top margin */
+  padding-top: 0; /* Remove top padding */
 }
 
 h1 {
@@ -53,6 +58,7 @@ h1 {
 }
 
 h2 {
+    font-family: 'Rocher'; /* Apply Rocher font to h2 tags */
     text-align: center;
 }
 
@@ -201,4 +207,35 @@ a:hover {
     width: 100px; /* Adjust size as needed */
     height: auto;
     background-color: #f0fdf4; /* Set the same green background as the rest of the page */
+}
+
+@font-palette-values --Grays {
+  font-family: Rocher;
+  base-palette: 9;
+}
+
+@font-palette-values --Purples {
+  font-family: Rocher;
+  base-palette: 6;
+}
+
+@font-palette-values --Mint {
+  font-family: Rocher;
+  base-palette: 7;
+}
+
+.grays {
+  font-palette: --Grays;
+}
+
+.purples {
+  font-palette: --Purples;
+}
+
+.mint {
+  font-palette: --Mint;
+}
+
+.rocher-font {
+    font-family: 'Rocher'; /* Apply Rocher font */
 } 
