--- a/styles.css
+++ b/styles.css
@@ -128,8 +128,17 @@ a {
     }
 
     .column {
-        width: 100%; /* Full width for each column */
-        margin: 0; /* Remove side margins */
+        margin-bottom: 30px; /* Add space below each column */
+        width: 85%; /* Reduce width by 15% */
+    }
+
+    .image-container {
+        margin-bottom: 30px; /* Add space below the image container */
+    }
+
+    .grid-item {
+        width: 125px; /* Set default width for grid items in mobile view */
+        height: 125px; /* Set default height for grid items in mobile view */
     }
 }
 
@@ -302,7 +311,7 @@ a {
 .grid-section {
     display: grid;
     grid-template-columns: repeat(2, 1fr); /* Create 4 columns */
-    grid-template-rows: repeat(4, 1fr); /* Create 4 rows */
+    grid-template-rows: repeat(2, 1fr); /* Create 4 rows */
     gap: 10px; /* Space between grid items */
     margin-top: 20px; /* Add some space above the grid */
     align-self: flex-end; /* Align the grid to the bottom */
@@ -324,4 +333,40 @@ a {
     max-width: 100%;
     max-height: 100%;
     object-fit: cover; /* Ensure the image covers the grid item without distortion */
+}
+
+.grid-desktop {
+    display: grid; /* Ensure grid is displayed */
+    grid-template-columns: repeat(2, 1fr); /* Create 2 columns */
+    grid-template-rows: repeat(2, 1fr); /* Create 2 rows */
+    gap: 10px; /* Space between grid items */
+    margin-top: 20px; /* Add some space above the grid */
+}
+
+.grid-mobile {
+    display: none; /* Hide mobile grid in desktop view */
+}
+
+@media (max-width: 768px) {
+    .grid-desktop {
+        display: none; /* Hide desktop grid in mobile view */
+    }
+
+    .grid-mobile {
+        display: grid; /* Display mobile grid in mobile view */
+    }
+
+    .column {
+        margin-bottom: 30px; /* Add space below each column */
+        width: 70%; /* Reduce width by 15% */
+    }
+
+    .image-container {
+        margin-bottom: 30px; /* Add space below the image container */
+    }
+
+    .grid-item {
+        width: 125px; /* Set default width for grid items in mobile view */
+        height: 125px; /* Set default height for grid items in mobile view */
+    }
 }
