--- a/styles.css
+++ b/styles.css
@@ -281,10 +281,10 @@
   .grid-mobile {
       display: none; /* Hide mobile grid in desktop view */
   }
-  
-   .form-section-mobile {
-   display : none;
-   }
+
+.form-area-mobile {
+    display: none; /* Hide mobile form on desktop */
+}
 
 .form-section {
     margin-top: 20px; /* Add space above the form */
@@ -486,13 +486,14 @@
         display: none;
     }
     
-    .form-section-mobile {
+    .form-area-mobile {
         order: 6;
         margin-top: 20px; /* Add space above the form */
         text-align: center; /* Center the form */
     }
 
-    .form-section-mobile form {
+    .form-area-mobile form {
+        order: 6;
         display: flex;
         flex-direction: row; /* Change to horizontal layout */
         align-items: center;
@@ -500,14 +501,15 @@
         gap: 10px; /* Space between form elements */
     }
 
-    .form-section-mobile input[type="email"] {
+    .form-area-mobile input[type="email"] {
+        order: 6;
         padding: 10px;
         border: 1px solid #ccc;
         border-radius: 5px;
         width: 200px; /* Set width for the email input */
     }
 
-    .form-section-mobile button {
+    .form-area-mobile button {
         padding: 10px 20px;
         background-color: #d4edda; /* Light green background */
         border: 1px solid #c3e6cb;
